--- a/LoRa-E5-Mini-EndNode.ioc
+++ b/LoRa-E5-Mini-EndNode.ioc
@@ -4,8 +4,30 @@ ADC.NbrOfConversion=1
 ADC.SamplingTimeCommon1=ADC_SAMPLETIME_160CYCLES_5
 ADC.SamplingTimeCommon2=ADC_SAMPLETIME_160CYCLES_5
 ADC.SelectedChannel=ADC_CHANNEL_TEMPSENSOR|ADC_CHANNEL_VREFINT
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 Dma.Request0=USART1_TX
-Dma.RequestsNb=1
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Channel_PRIV_NPRIV=DMA_CHANNEL_NPRIV_DISABLE
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.Instance=DMA1_Channel2
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_NORMAL
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber,Channel_PRIV_NPRIV
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
 Dma.USART1_TX.0.Channel_PRIV_NPRIV=DMA_CHANNEL_NPRIV_DISABLE
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.0.EventEnable=DISABLE
@@ -31,20 +53,17 @@ I2C2.Timing=0x20303E5D
 KeepUserPlacement=false
 LORAWAN.APP_TX_DUTYCYCLE=60000
 LORAWAN.Activate_BOARD_RESOURCES=M4
-LORAWAN.IPParameters=SUBGHZ_APPLICATION,USE_LPM,Activate_BOARD_RESOURCES,REGION_KR920,STATIC_DEVICE_EUI,LORAWAN_APP_KEY,APP_TX_DUTYCYCLE,TX_RFO_CONFIG
+LORAWAN.IPParameters=SUBGHZ_APPLICATION,Activate_BOARD_RESOURCES,REGION_KR920,STATIC_DEVICE_EUI,LORAWAN_APP_KEY,APP_TX_DUTYCYCLE,TX_RFO_CONFIG
 LORAWAN.LORAWAN_APP_KEY=3C,4F,CF,09,88,15,F7,AB,A6,D2,AE,28,16,15,7E,2B
 LORAWAN.REGION_KR920=true
 LORAWAN.STATIC_DEVICE_EUI=false
 LORAWAN.SUBGHZ_APPLICATION=LORA_END_NODE
 LORAWAN.TX_RFO_CONFIG=RBI_CONF_RFO_HP
-LORAWAN.USE_LPM=true
-LoRaWAN.BSP.number=5
+LoRaWAN.BSP.number=3
 LoRaWAN0.BSP.STBoard=false
 LoRaWAN0.BSP.api=Unknown
 LoRaWAN0.BSP.component=
 LoRaWAN0.BSP.condition=\!SEM_LORA_USER_APPLICATION | SEM_LORA_USE_ADC
-LoRaWAN0.BSP.i2caddr=0
-LoRaWAN0.BSP.i2creg=
 LoRaWAN0.BSP.instance=ADC
 LoRaWAN0.BSP.ip=ADC
 LoRaWAN0.BSP.mode=Vrefint Channel
@@ -55,8 +74,6 @@ LoRaWAN1.BSP.STBoard=false
 LoRaWAN1.BSP.api=Unknown
 LoRaWAN1.BSP.component=
 LoRaWAN1.BSP.condition=\!SEM_LORA_USER_APPLICATION | SEM_LORA_USE_RTC
-LoRaWAN1.BSP.i2caddr=0
-LoRaWAN1.BSP.i2creg=
 LoRaWAN1.BSP.instance=RTC
 LoRaWAN1.BSP.ip=RTC
 LoRaWAN1.BSP.mode=RTC Enabled
@@ -67,38 +84,13 @@ LoRaWAN2.BSP.STBoard=false
 LoRaWAN2.BSP.api=Unknown
 LoRaWAN2.BSP.component=
 LoRaWAN2.BSP.condition=SEM_LORA_END_NODE  | SEM_LORA_USE_UART
-LoRaWAN2.BSP.i2caddr=0
-LoRaWAN2.BSP.i2creg=
 LoRaWAN2.BSP.instance=USART1
 LoRaWAN2.BSP.ip=(LPU|US)ART
 LoRaWAN2.BSP.mode=Asynchronous
 LoRaWAN2.BSP.name=USART
 LoRaWAN2.BSP.semaphore=
 LoRaWAN2.BSP.solution=USART1
-LoRaWAN3.BSP.STBoard=false
-LoRaWAN3.BSP.api=Unknown
-LoRaWAN3.BSP.component=
-LoRaWAN3.BSP.condition=SEM_BOARD_RESOURCES_M0PLUS_FOR_LORA | SEM_BOARD_RESOURCES_M4_FOR_LORA | SEM_BOARD_RESOURCES_BOTH_FOR_LORA
-LoRaWAN3.BSP.i2caddr=0
-LoRaWAN3.BSP.i2creg=
-LoRaWAN3.BSP.instance=PB5
-LoRaWAN3.BSP.ip=GPIO
-LoRaWAN3.BSP.mode=Output
-LoRaWAN3.BSP.name=LED 2
-LoRaWAN3.BSP.semaphore=
-LoRaWAN3.BSP.solution=PB5
-LoRaWAN4.BSP.STBoard=false
-LoRaWAN4.BSP.api=HAL_EXTI_DRIVER
-LoRaWAN4.BSP.component=
-LoRaWAN4.BSP.condition=SEM_BOARD_RESOURCES_M0PLUS_FOR_LORA | SEM_BOARD_RESOURCES_M4_FOR_LORA | SEM_BOARD_RESOURCES_BOTH_FOR_LORA
-LoRaWAN4.BSP.i2caddr=0
-LoRaWAN4.BSP.i2creg=
-LoRaWAN4.BSP.instance=PB13
-LoRaWAN4.BSP.ip=GPIO
-LoRaWAN4.BSP.mode=EXTI
-LoRaWAN4.BSP.name=BUTTON 1
-LoRaWAN4.BSP.semaphore=
-LoRaWAN4.BSP.solution=PB13
+Mcu.CPN=STM32WL55JCI6
 Mcu.ContextProject=MonoOnDualCore
 Mcu.Family=STM32WL
 Mcu.IP0=ADC
@@ -156,24 +148,25 @@ Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=USART_BAUDRATE,115200;RTC_PREDIV_A,((1<<(15-RTC_N_PREDIV_S))-1);RTC_N_PREDIV_S,10;RTC_PREDIV_S,((1<<RTC_N_PREDIV_S)-1)
 Mcu.UserName=STM32WL55JCIx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TAMP_STAMP_LSECSS_SSRU_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SUBGHZ_Radio_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TAMP_STAMP_LSECSS_SSRU_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 OSC_IN.Mode=HSE-TCXO
 OSC_IN.Signal=RCC_OSC_IN
 PA0.GPIOParameters=GPIO_Label
@@ -271,12 +264,15 @@ ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=LoRa-E5-Mini-EndNode.ioc
 ProjectManager.ProjectName=LoRa-E5-Mini-EndNode
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SUBGHZ_Init-SUBGHZ-false-HAL-true,4-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_USART1_UART_Init-USART1-true-HAL-false,7-MX_ADC_Init-ADC-true-HAL-false,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LoRaWAN_Init-LORAWAN-false-HAL-false,5-MX_SUBGHZ_Init-SUBGHZ-true-HAL-false,6-MX_USART1_UART_Init-USART1-true-HAL-false,7-MX_ADC_Init-ADC-true-HAL-false,8-MX_RTC_Init-RTC-true-HAL-false,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -325,7 +321,7 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SUBGHZ.BaudratePrescaler=SUBGHZSPI_BAUDRATEPRESCALER_4
 SUBGHZ.IPParameters=BaudratePrescaler
-USART1.BaudRate=USART_BAUDRATE
+USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=9600
